# chess_engine

./: .gitignore  CMakeLists.txt  README.md  build_and_benchmark_debug.sh  build_and_test.sh  build_and_test_callgrind.sh  build_and_test_debug.sh  build_and_test_gdb.sh  build_and_test_gprof.sh  build_and_test_massif.sh  build_and_test_release.sh  build_and_test_with_gprof.sh  build_and_test_with_valgrind.sh  configure.sh  shell.nix
benchmark/: BenchmarkMain.cpp  CMakeLists.txt
src-exe/: CMakeLists.txt  main.cpp
src-lib/: Board.cpp  CMakeLists.txt  ChessBoard.cpp  Engine.cpp  Game.cpp  GameEngine.cpp  RandomMovePlayer.cpp
src-lib/api/ChessEngineLib/: Board.hpp  ChessBoard.hpp  Engine.hpp  Game.hpp  GameEngine.hpp  Move.hpp  Player.hpp  RandomMovePlayer.hpp
tests/: AiPlayersTests.cpp  CMakeLists.txt  ChessBoardTests.cpp  ChessEngineTests.cpp  GameTests.cpp
